# xmonad-config

./: .gitignore  README.md  hie.yaml  my-xmonad.cabal  stack.yaml  xmonad.desktop  xmonad.hs  xmonadctl.hs
config/: keys.json  keys.yaml  settings.yaml
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
lib/: Commands.hs  Dock.hs  Hooks.hs  Keys.hs  Layout.hs  Layouts.hs  PerScreen.hs  Polybar.hs  ScratchPad.hs  Server.hs  Settings.hs  Util.hs
lib/Hooks/: Dock.hs  Layout.hs  Server.hs
lib/Layout/: PerScreen.hs  Util.hs
src/: Hooks.hs  Keys.hs  Layouts.hs  Main.hs  Settings.hs
