name:                my-xmonad
version:             0.1.1.0
build-type:          Simple
cabal-version:       >=1.10

executable my-xmonad
  main-is:             ../xmonad.hs
  other-modules: Keys Layouts Settings Hooks Dock ScratchPad Util PerScreen
  build-depends:       base
                     , xmonad >= 0.13
                     , xmonad-contrib >= 0.13
                     , containers
                     , process
                     , aeson
                     , bytestring
                     , text
                     , MissingH
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -fno-warn-missing-signatures -threaded

-- In progress
-- executable xmonadctl
--  main-is:             ../xmonadctl.hs
--  build-depends:       base
--                     , xmonad >= 0.13
--                     , xmonad-contrib >= 0.13
--                     , X11
--  hs-source-dirs:      lib
--  default-language:    Haskell2010
--  ghc-options:         -Wall -Werror -fno-warn-missing-signatures -threaded
