name:                my-xmonad
version:             0.1.1.0
build-type:          Simple
cabal-version:       >=1.10

executable my-xmonad
  main-is:             ../xmonad.hs
  other-modules: Commands Hooks Hooks.Dock Hooks.Layout Hooks.Server Keys Layout Layout.PerScreen Layout.Util ScratchPad Settings Util
  build-depends:       base
                     , xmonad >= 0.17
                     , xmonad-contrib >= 0.17
                     , containers
                     , process
                     , aeson
                     , bytestring
                     , text
                     , MissingH
                     , utf8-string
                     , yaml
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror -fno-warn-missing-signatures -threaded

executable xmonadctl
  main-is:            ../xmonadctl.hs
  build-depends:      base
                    , xmonad >= 0.17
                    , xmonad-contrib >= 0.17
                    , X11
  hs-source-dirs:     lib
  default-language:   Haskell2010
  ghc-options:        -Wall -Werror -fno-warn-missing-signatures -threaded
